Fixes bullet alignment

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -15,6 +15,12 @@ main
   width:100%;
   position:absolute;
 
+#underserved-description
+  ul
+    text-align: left
+    margin: 1em
+    word-break: break-all
+
 article
   margin: auto
   max-width: 1024px
